--- a/package.json
+++ b/package.json
@@ -1,3 +1,7 @@
+"dependencies": {
+  "@google/genai": "^[version.number]" 
+  // El número de versión puede variar, lo importante es que la línea exista.
+}
 {
   "name": "pag.lj",
   "version": "1.0.0",
@@ -16,8 +20,5 @@
   "bugs": {
     "url": "https://github.com/LuLo08/Pag.LJ/issues"
   },
-  "homepage": "https://github.com/LuLo08/Pag.LJ#readme",
-  "dependencies": {
-    "@google/genai": "^1.26.0"
-  }
+  "homepage": "https://github.com/LuLo08/Pag.LJ#readme"
 }
